--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,8 @@
   "description": "Front-end GUI for CDAT using React and Redux",
   "main": "src/js/app.js",
   "dependencies": {
-<<<<<<< 55437d797bae29dd1d2da0b6a65b5d0c0a6f914c
-=======
     "golden-layout": "^1.5.1",
     "imports-loader": "^0.6.5",
->>>>>>> fixed ReactDOM not defined for golden layout without using global var
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -25,7 +22,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src/ --output-public-path=/dist/",
+    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src/ --output-public-path=/dist/",
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/"
   },
   "license": "Unknown",
