--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src/ --output-public-path=/dist/",
+    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src/ --output-public-path=/dist/",
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/"
   },
   "license": "Unknown",
