--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "Front-end GUI for CDAT using React and Redux",
   "main": "src/js/app.js",
   "dependencies": {
+    "css-element-queries": "^0.3.2",
     "golden-layout": "^1.5.1",
     "imports-loader": "^0.6.5",
     "react": "^15.1.0",
