--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,5 +23,6 @@
     "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src/ --output-public-path=/dist/",
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/"
   },
-  "license": ""
+  "license": "",
+  "repository": "http://github.com/UV-CDAT/vcdat"
 }
