--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-undo": "^0.6.1"
+    "redux-undo": "^0.6.1",
+    "vcs-js": "github:uv-cdat/vcs-js"
   },
   "devDependencies": {
     "babel-cli": "^6.4.0",
@@ -17,6 +18,7 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "json-loader": "^0.5.4",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   },
