--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.5.0",
+    "eslint": "^3.2.2",
+    "eslint-plugin-react": "^6.0.0",
     "karma": "^1.1.2",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.1.1",
