--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,5 +18,6 @@
     "rules": {
             "max-len": ["error", 120, 4],
             "spaced-comment": ["error", "always"]
-    }
+    },
+    "root": true
 }
