Rolled eslint back to non-broken version

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.5.0",
-    "eslint": "^3.2.2",
-    "eslint-plugin-filenames": "^1.1.0",
-    "eslint-plugin-react": "^6.0.0",
+    "eslint": "3.2.2",
+    "eslint-plugin-react": "^6.1.0",
     "karma": "^1.1.2",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.1.1",
@@ -30,11 +29,14 @@
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   },
+  "bin": {
+      "eslint" : "./node_modules/.bin/eslint"
+  },
   "scripts": {
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/",
-    "lint": "./node_modules/.bin/eslint -f table src/"
+    "lint": "$(npm bin)/eslint -f table src/"
   },
-  "license": "This is a license",
+  "license": "",
   "repository": "http://github.com/UV-CDAT/vcdat",
-  "README": "../README.md"
+  "README": ""
 }
