--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
     "eslint": "3.2.2",
     "eslint-plugin-react": "^6.1.0",
     "karma": "^1.1.2",
