--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,67 +1,8 @@
-adamsregrid==0.0.0
-aniso8601==1.1.0
-asciidata===Wed.Jun.29.23-06-17.2016
-basemap==1.0.7
-binaryio==0.0.0
-cdat-info==0.0.0
-cdms==1.0
-cdms2==5.0
-cdtime==3.2
-cdutil===-
-cffi==1.6.0
 click==6.6
-CMOR==2.0
-coverage==4.2
-cryptography==1.4
-distarray==1.0
-dsgrid==1.0
-DV3D==0.0.0
-enum34==1.1.6
-esg==1.0
-EzTemplate==1.0
 Flask==0.11.1
-Flask-RESTful==0.3.5
-genutil===-
-HDF5Tools==1.0
-idna==2.1
-ipaddress==1.0.16
 itsdangerous==0.24
 Jinja2==2.8
-libcf==1.0b11
-lmoments==0.0.0
-MA==1.0
 MarkupSafe==0.23
-marshmallow==2.9.1
-matplotlib==1.4.3
-metrics==1.0.0
-MV==1.0
-MV2==1.0
-natgrid==1.0
-nose==1.3.7
-numpy==1.9.2
-ort==0.0.0
-pyasn1==0.1.9
-pycparser==2.14
-pydebug==1.5.4
-pyOpenSSL==16.0.0
-pyparsing==2.0.3
-python-dateutil==2.5.3
-pytz==2016.6.1
-regrid==1.0
-regrid2==3.3
-scikit-learn==0.16.1
-scipy==0.17.1
-sh==0.0.0
-six==1.10.0
-sphere==0.0.0
 SQLAlchemy==1.0.13
-thermo==1.0
-trends==0.0.0
-udunits==1.0
-UNKNOWN==0.0.0
-vcs===v2.5.0-575-gd1eacf4
-vcsaddons==0.9
 Werkzeug==0.11.10
-WK==1.0
-xmgrace==1.1
-ZonalMeans==1.0
+wheel==0.24.0
