--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,101 @@
-click==6.6
-Flask==0.11.1
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-SQLAlchemy==1.0.13
-Werkzeug==0.11.10
-wheel==0.24.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+basemap=1.0.7=np19py27_0
+cffi=1.6.0=py27_0
+cloog=0.18.0=0
+coverage=4.0.3=py27_0
+cryptography=1.4=py27_0
+curl=7.49.0=0
+enum34=1.1.6=py27_0
+freetype=2.5.5=1
+geos=3.3.3=0
+gmp=5.1.2=6
+idna=2.1=py27_0
+ipaddress=1.0.16=py27_0
+isl=0.12.2=1
+jbig=2.1=0
+jpeg=8d=1
+libpng=1.6.17=0
+libtiff=4.0.6=2
+matplotlib=1.4.3=np19py27_3
+mkl=11.3.3=0
+mpc=1.0.1=0
+mpfr=3.1.2=0
+nose=1.3.7=py27_1
+numpy=1.9.2=py27_2
+openssl=1.0.2h=1
+pip=8.1.2=py27_0
+pyasn1=0.1.9=py27_0
+pycparser=2.14=py27_1
+pyopenssl=0.16.0=py27_0
+pyparsing=2.0.3=py27_0
+pyqt=4.11.3=py27_0
+python=2.7.12=1
+python-dateutil=2.5.3=py27_0
+pytz=2016.6.1=py27_0
+qt=4.8.6=3
+readline=6.2=2
+scikit-learn=0.16.1=np19py27_0
+scipy=0.17.1=np19py27_1
+setuptools=23.0.0=py27_0
+sip=4.16.5=py27_0
+six=1.10.0=py27_0
+sqlite=3.13.0=0
+tk=8.5.18=0
+asciidata=2.6=UVCDAT
+binaryio=2.6=UVCDAT
+cdat_info=2.6.1=UVCDAT
+cdms2=2.6.1=UVCDAT
+cdtime=2.6.1=UVCDAT
+cdutil=2.6=UVCDAT
+clapack=3.2.1=UVCDAT
+cmor=2.9.2=PCMDI
+cssgrid=2.6.1=UVCDAT
+distarray=2.6=UVCDAT
+dsgrid=2.6=UVCDAT
+dv3d=2.6=UVCDAT
+esg=2.6=UVCDAT
+esmf=ESMF_6_3_0rp1_ESMP_01=UVCDAT
+eztemplate=2.6=UVCDAT
+ffmpeg=2.7.0=UVCDAT
+g2clib=1.4.0b=UVCDAT
+genutil=2.6=UVCDAT
+gfortran=4.9.3=1
+hdf5=1.8.16=UVCDAT
+hdf5tools=2.6=UVCDAT
+jasper=1.900.1=UVCDAT
+lapack=3.4.2=UVCDAT
+libcdms=2.6.1=UVCDAT
+libcf=1.0.beta11=UVCDAT
+libdrs_c=1.0.1=UVCDAT
+libdrs_f=1.0.1=UVCDAT
+libnetcdf=4.3.3.1=UVCDAT
+lmoments=2.6.1=UVCDAT
+natgrid=2.6=UVCDAT
+ort=2.6.1=UVCDAT
+ossuuid=1.6.2=UVCDAT
+proj4=4.9.2=UVCDAT
+pydebug=2.6=UVCDAT
+regrid2=2.6.1=UVCDAT
+regridpack=2.6.1=UVCDAT
+shgrid=2.6.1=UVCDAT
+spherepack=2.6.1=UVCDAT
+thermo=2.6=UVCDAT
+trends=2.6=UVCDAT
+udunits2=2.2.17=UVCDAT
+unidata=2.6=UVCDAT
+uvcdat=2.6.1=UVCDAT
+uvcmetrics=1.0.2.6=UVCDAT
+vcs=2.6=UVCDAT
+vcsaddons=2.6=UVCDAT
+vistrails=master=UVCDAT
+vtk=7.1.0.2.6=uvcdat_master
+wk=2.6=UVCDAT
+x264=20151006.2245=UVCDAT
+xmgrace=2.6=UVCDAT
+yasm=1.2.0=UVCDAT
+zonalmeans=2.6.1=UVCDAT
+wheel=0.29.0=py27_0
+xz=5.2.2=0
+zlib=1.2.8=3
