--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "description": "Front-end GUI for CDAT using React and Redux",
   "main": "src/js/app.js",
+  "private": true,
   "dependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-airbnb": "^2.0.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-element-queries": "^0.3.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-undo": "^0.6.1"
+    "redux-undo": "^0.6.1",
+    "supports-color": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.4.0",
@@ -17,15 +25,22 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint": "3.2.2",
     "eslint-plugin-react": "^6.1.0",
+    "jsdom": "^9.4.2",
     "karma": "^1.1.2",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-cli": "^1.0.1",
     "karma-mocha": "^1.1.1",
     "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
+    "react-addons-test-utils": "^15.3.0",
     "sinon": "^1.17.5",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
@@ -35,6 +50,5 @@
     "lint": "$(npm bin)/eslint -f table src/"
   },
   "license": "",
-  "repository": "http://github.com/UV-CDAT/vcdat",
-  "README": ""
+  "repository": "http://github.com/UV-CDAT/vcdat"
 }
