Added a general npm-debug.log ignore to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ frontend/dist
 backend/env
 *jquery-ui-1.11.4.custom
 .idea/
-backend/npm-debug.log
-frontend/npm-debug.log
+npm-debug.log
 *.coverage*
