Fixed npm lint script so linter runs on all frontend .js/.jsx . Added lint_silent to npm scripts; outputs to lint.out instead of stdout.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/",
-    "lint": "$(npm bin)/eslint -f table src/"
+    "lint": "$(npm bin)/eslint -f table src/, src/js/*/*.js*",
+    "lint_silent": "$(npm bin)/eslint -f table src/, src/js/*/*.js* > lint.out"
   },
   "license": "",
   "repository": "http://github.com/UV-CDAT/vcdat"
