--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ frontend/dist
 backend/env
 *jquery-ui-1.11.4.custom
 .idea/
-backend/npm-debug.log
-frontend/npm-debug.log
+npm-debug.log
+*.swp
+lint.out
 *.coverage*
