--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "css-element-queries": "^0.3.2",
+    "jquery": "^3.1.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
