--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,23 +20,46 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-register": "^6.14.0",
+    "blanket": "^1.2.3",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint": "3.2.2",
     "eslint-plugin-react": "^6.1.0",
+    "html-file-cov": "^1.0.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.5",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "jsdom": "^9.4.5",
-    "karma": "^1.1.2",
+    "karma": "^1.2.0",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
     "sinon": "^1.17.5",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
   },
+  "config": {
+    "blanket": {
+      "pattern": "src",
+      "data-cover-never": [
+        "dist",
+        "node_modules",
+        "test"
+      ],
+      "loader": "blanket-stub-jsx.js"
+    }
+  },
   "scripts": {
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/",
-    "test": "mocha test/mocha/ -g '.*Test.js[x]{0,1}' --compilers jsx:babel-core/register --recursive",
+    "coverage": "mocha --require blanket --reporter html-file-cov test/mocha --recursive > coverage.html",
+    "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive",
     "lint": "$(npm bin)/eslint -f table src/*.js* src/*/*.js* src/*/*/*.js* src/*/*/*/*.js*",
     "lint_silent": "npm run lint > lint.out; vim lint.out"
   },
