--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
+    "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "blanket": "^1.2.3",
     "chai": "^3.5.0",
@@ -41,6 +43,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
+    "mocha-jsdom": "^1.1.0",
+    "react-addons-test-utils": "^15.3.1",
     "sinon": "^1.17.5",
     "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
