--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,27 +18,56 @@
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
+    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-plugin-istanbul": "^2.0.1",
+    "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint": "3.2.2",
     "eslint-plugin-react": "^6.1.0",
+    "html-file-cov": "^1.0.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.5",
+    "istanbul-instrumenter-loader": "^0.2.0",
     "jsdom": "^9.4.5",
-    "karma": "^1.1.2",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^1.1.1",
-    "karma-sinon": "^1.0.5",
     "mocha": "^3.0.2",
+    "mocha-jsdom": "^1.1.0",
+    "nyc": "^8.3.0",
+    "react-addons-test-utils": "^15.3.1",
     "sinon": "^1.17.5",
-    "webpack": "^1.12.11",
     "webpack-dev-server": "^1.14.1"
+  },
+  "config": {
+    "blanket": {
+      "pattern": "src",
+      "data-cover-never": [
+        "dist",
+        "node_modules",
+        "test"
+      ]
+    }
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false,
+    "include": [
+      "src/**/*.js*"
+    ],
+    "require": [
+      "babel-register"
+    ]
   },
   "scripts": {
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/",
-    "test": "mocha test/mocha/ -g '.*Test.js[x]{0,1}' --compilers jsx:babel-core/register --recursive",
+    "coverage": "mocha --require blanket --compilers jsx:babel-core/register --reporter html-file-cov test/mocha --recursive > coverage.html",
+    "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive",
     "lint": "$(npm bin)/eslint -f table src/*.js* src/*/*.js* src/*/*/*.js* src/*/*/*/*.js*",
-    "lint_silent": "npm run lint > lint.out; vim lint.out"
+    "lint_silent": "npm run lint > lint.out; vim lint.out",
+    "coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text npm test"
   },
   "license": "",
   "repository": "http://github.com/UV-CDAT/vcdat"
