--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,7 +18,6 @@ jbig=2.1=0
 jpeg=8d=1
 libpng=1.6.17=0
 libtiff=4.0.6=2
-matplotlib=1.4.3=np19py27_3
 mkl=11.3.3=0
 mpc=1.0.1=0
 mpfr=3.1.2=0
@@ -36,8 +35,6 @@ python-dateutil=2.5.3=py27_0
 pytz=2016.6.1=py27_0
 qt=4.8.6=3
 readline=6.2=2
-scikit-learn=0.16.1=np19py27_0
-scipy=0.17.1=np19py27_1
 setuptools=23.0.0=py27_0
 sip=4.16.5=py27_0
 six=1.10.0=py27_0
@@ -46,7 +43,8 @@ tk=8.5.18=0
 asciidata=2.6=UVCDAT
 binaryio=2.6=UVCDAT
 cdat_info=2.6.1=UVCDAT
-cdms2=2.6.1=UVCDAT
+cdms2=2016.10.21=Provenance
+vcs-js=0.1
 cdtime=2.6.1=UVCDAT
 cdutil=2.6=UVCDAT
 clapack=3.2.1=UVCDAT
@@ -85,11 +83,9 @@ thermo=2.6=UVCDAT
 trends=2.6=UVCDAT
 udunits2=2.2.17=UVCDAT
 unidata=2.6=UVCDAT
-uvcdat=2.6.1=UVCDAT
 uvcmetrics=1.0.2.6=UVCDAT
 vcs=2.6=UVCDAT
 vcsaddons=2.6=UVCDAT
-vistrails=master=UVCDAT
 vtk=7.1.0.2.6=uvcdat_master
 wk=2.6=UVCDAT
 x264=20151006.2245=UVCDAT
