--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "react-redux": "^4.4.5",
     "redux": "=3.5.2",
     "redux-undo": "^0.6.1",
-    "webpack": "^1.12.11"
+    "vcs-widgets": "uv-cdat/vcs-widgets"
   },
   "devDependencies": {
+    "webpack": "^1.12.11",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
