--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,99 +1,77 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
-basemap=1.0.7=np19py27_0
-cffi=1.6.0=py27_0
+backports_abc=0.5=py27_0
+ca-certificates=2016.9.26=0
+cdat_info=2.8=py27_2
+cdms2=2016.8.26=UVCDAT
+cdtime=2.8=np111py27_2
+cdutil=2.8=py27_2
+certifi=2016.9.26=py27_0
+clapack=3.2.1=2
+click=6.6=py27_0
 cloog=0.18.0=0
-coverage=4.0.3=py27_0
-cryptography=1.4=py27_0
-curl=7.49.0=0
-enum34=1.1.6=py27_0
-freetype=2.5.5=1
-geos=3.3.3=0
-gmp=5.1.2=6
-idna=2.1=py27_0
-ipaddress=1.0.16=py27_0
-isl=0.12.2=1
-jbig=2.1=0
-jpeg=8d=1
-libpng=1.6.17=0
-libtiff=4.0.6=2
-mkl=11.3.3=0
-mpc=1.0.1=0
-mpfr=3.1.2=0
-nose=1.3.7=py27_1
-numpy=1.9.2=py27_2
-openssl=1.0.2h=1
-pip=8.1.2=py27_0
-pyasn1=0.1.9=py27_0
-pycparser=2.14=py27_1
-pyopenssl=0.16.0=py27_0
-pyparsing=2.0.3=py27_0
-pyqt=4.11.3=py27_0
-python=2.7.12=1
-python-dateutil=2.5.3=py27_0
-pytz=2016.6.1=py27_0
-qt=4.8.6=3
-readline=6.2=2
-setuptools=23.0.0=py27_0
-sip=4.16.5=py27_0
-six=1.10.0=py27_0
-sqlite=3.13.0=0
-tk=8.5.18=0
-asciidata=2.6=UVCDAT
-binaryio=2.6=UVCDAT
-cdat_info=2.6.1=UVCDAT
-cdms2=2016.10.21=Provenance
-vcs-js<1
-cdtime=2.6.1=UVCDAT
-cdutil=2.6=UVCDAT
-clapack=3.2.1=UVCDAT
-cmor=2.9.2=PCMDI
-cssgrid=2.6.1=UVCDAT
-distarray=2.6=UVCDAT
-dsgrid=2.6=UVCDAT
-dv3d=2.6=UVCDAT
-esg=2.6=UVCDAT
-esmf=ESMF_6_3_0rp1_ESMP_01=UVCDAT
-eztemplate=2.6=UVCDAT
-ffmpeg=2.7.0=UVCDAT
-g2clib=1.4.0b=UVCDAT
-genutil=2.6=UVCDAT
+curl=7.49.1=1
+distarray=2.8=py27_2
+dv3d=2.8=py27_2
+esmf=7.0.0=4
+expat=2.1.0=2
+ffmpeg=2.8.6=2
+flask=0.11.1=py27_0
+freetype=2.7=0
+g2clib=1.6.0=2
+gcc=4.8.5=7
+genutil=2016.8.26=UVCDAT
 gfortran=4.9.3=1
-hdf5=1.8.16=UVCDAT
-hdf5tools=2.6=UVCDAT
-jasper=1.900.1=UVCDAT
-lapack=3.4.2=UVCDAT
-libcdms=2.6.1=UVCDAT
-libcf=1.0.beta11=UVCDAT
-libdrs_c=1.0.1=UVCDAT
-libdrs_f=1.0.1=UVCDAT
-libnetcdf=4.3.3.1=UVCDAT
-lmoments=2.6.1=UVCDAT
-natgrid=2.6=UVCDAT
-ort=2.6.1=UVCDAT
-ossuuid=1.6.2=UVCDAT
-proj4=4.9.2=UVCDAT
-pydebug=2.6=UVCDAT
-regrid2=2.6.1=UVCDAT
-regridpack=2.6.1=UVCDAT
-shgrid=2.6.1=UVCDAT
-spherepack=2.6.1=UVCDAT
-thermo=2.6=UVCDAT
-trends=2.6=UVCDAT
-udunits2=2.2.17=UVCDAT
-unidata=2.6=UVCDAT
-uvcmetrics=1.0.2.6=UVCDAT
-vcs=2.6=UVCDAT
-vcsaddons=2.6=UVCDAT
-vtk=7.1.0.2.6=uvcdat_master
-wk=2.6=UVCDAT
-x264=20151006.2245=UVCDAT
-xmgrace=2.6=UVCDAT
-yasm=1.2.0=UVCDAT
-zonalmeans=2.6.1=UVCDAT
+gmp=6.1.1=1
+hdf4=4.2.12=0
+hdf5=1.8.17=7
+isl=0.12.2=1
+itsdangerous=0.24=py27_0
+jasper=1.900.1=3
+jinja2=2.8=py27_1
+jpeg=9b=0
+lapack=3.6.1=1
+libcdms=2.8=2
+libcf=1.0.beta11=py27_2
+libdrs_c=1.0.1=2
+libdrs_f=1.0.1=2
+libgcc=4.8.5=1
+libgfortran=3.0.0=0
+libnetcdf=4.4.1=0
+libpng=1.6.26=0
+libtiff=4.0.6=7
+markupsafe=0.23=py27_2
+mkl=11.3.3=0
+mpc=1.0.3=2
+mpfr=3.1.4=2
+ncurses=5.9=9
+netcdf-fortran=4.4.4=1
+nodejs=4.5.0=0
+numpy=1.11.2=py27_0
+openssl=1.0.2h=2
+ossuuid=1.6.2=2
+pip=9.0.1=py27_0
+proj4=4.9.3=1
+python=2.7.12=1
+readline=6.2=0
+regrid2=2016.8.26=UVCDAT
+requests=2.12.1=py27_0
+setuptools=29.0.1=py27_0
+singledispatch=3.4.0.3=py27_0
+six=1.10.0=py27_1
+sqlite=3.13.0=1
+ssl_match_hostname=3.5.0.1=py27_0
+tk=8.5.19=0
+tornado=4.4.2=py27_0
+udunits2=2.2.20=1
+unidata=2016.8.26=UVCDAT
+vcs=2.8=py27_2
+vcs-js=0.2.2=py27_0
+vcsaddons=2.8=py27_2
+vtk-cdat=7.1.0.2.8=py27_2
+werkzeug=0.11.11=py27_1
 wheel=0.29.0=py27_0
+x264=20131217=1
 xz=5.2.2=0
 zlib=1.2.8=3
-nodejs
-flask
