--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,16 +16,13 @@
     "vcs-widgets": "^0.0.1"
   },
   "devDependencies": {
-    "webpack": "^1.12.11",
+    "webpack": "^2.2.1",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
     "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-istanbul": "^2.0.1",
-    "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
@@ -40,8 +37,7 @@
     "mocha-jsdom": "^1.1.0",
     "nyc": "^8.3.0",
     "react-addons-test-utils": "^15.3.1",
-    "sinon": "^1.17.5",
-    "webpack-dev-server": "^1.14.1"
+    "sinon": "^1.17.5"
   },
   "config": {
     "blanket": {
