--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
     "vcs-widgets": "^0.0.1"
   },
   "devDependencies": {
-    "webpack": "^2.2.1",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
@@ -37,7 +37,8 @@
     "mocha-jsdom": "^1.1.0",
     "nyc": "^8.3.0",
     "react-addons-test-utils": "^15.3.1",
-    "sinon": "^1.17.5"
+    "sinon": "^1.17.5",
+    "webpack": "^2.2.1"
   },
   "config": {
     "blanket": {
