--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,23 +8,21 @@
     "css-element-queries": "^0.3.2",
     "jquery": "^3.1.0",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "=3.5.2",
     "redux-undo": "^0.6.1",
-    "vcs-widgets": "uv-cdat/vcs-widgets"
+    "vcs-widgets": "^0.0.1"
   },
   "devDependencies": {
-    "webpack": "^1.12.11",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
     "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-istanbul": "^2.0.1",
-    "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
@@ -40,7 +38,7 @@
     "nyc": "^8.3.0",
     "react-addons-test-utils": "^15.3.1",
     "sinon": "^1.17.5",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.2.1"
   },
   "config": {
     "blanket": {
@@ -64,11 +62,10 @@
   },
   "scripts": {
     "build": "webpack --inline --colors --progress --display-error-details --display-cached --content-base src/",
-    "coverage": "mocha --require blanket --compilers jsx:babel-core/register --reporter html-file-cov test/mocha --recursive > coverage.html",
+    "coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text npm test",
     "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive",
     "lint": "$(npm bin)/eslint -f table src/*.js* src/*/*.js* src/*/*/*.js* src/*/*/*/*.js*",
-    "lint_silent": "npm run lint > lint.out; vim lint.out",
-    "coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text npm test"
+    "lint_silent": "npm run lint > lint.out; vim lint.out"
   },
   "license": "",
   "repository": "http://github.com/UV-CDAT/vcdat"
