Editor controls template labels (#100)
* MBH: updated gitignore for bin and updated requirments to include vcs-js

* MBH: cleaned up .gitignore

* MBH: close 64, css styling will come in 66 patch

* MBH: removing logging debug statements

* MBH: Sam review and questions

* Editor controls template labels (#95)

* MBH: updated gitignore for bin and updated requirments to include vcs-js

* MBH: cleaned up .gitignore

* MBH: close 64, css styling will come in 66 patch

* MBH: removing logging debug statements

* MBH: Sam review and questions

* MBH: template editor 90%

* Editor controls template labels (#97)

* MBH: updated gitignore for bin and updated requirments to include vcs-js

* MBH: cleaned up .gitignore

* MBH: close 64, css styling will come in 66 patch

* MBH: removing logging debug statements

* MBH: Sam review and questions

* MBH: template editor 90%

* MBH: matching file explore button layout

* Editor controls template labels (#98)

* MBH: updated gitignore for bin and updated requirments to include vcs-js

* MBH: cleaned up .gitignore

* MBH: close 64, css styling will come in 66 patch

* MBH: removing logging debug statements

* MBH: Sam review and questions

* MBH: template editor 90%

* MBH: matching file explore button layout

* MBH: updating readme logo img

* MBH: Template Axis. next move to widgets

* Fixed broken path

* Fixed bug caused by install changes

* Fixed the missing labels

* Wired the updateTemplate function back in

* Fixed template preview width

* MBH: code review corrections

* Fixed couple of bugs

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,11 @@ lint.out
 htmlcov/
 frontend/.nyc_output
 frontend/coverage
+frontend/bin/
 *.log
 backend/vcdat/resources
 build/
 dist/
 *.egg-info
+
+ 
