MBH: updating build to use nightly and be more generic for mac and ubuntu

--- a/conda-recipe/vcdat/meta.yaml
+++ b/conda-recipe/vcdat/meta.yaml
@@ -21,5 +21,5 @@ source:
   git_rev: v0.0.2
   git_url: git://github.com/UV-CDAT/vcdat.git
 build:
-  # noarch_python: true
+  noarch_python: true
   number: 1
