--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "css-element-queries": "^0.3.2",
     "jquery": "^3.1.0",
+    "lodash": "^4.17.4",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.7",
     "react-dnd": "^2.2.4",
@@ -27,6 +28,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.28.4",
     "enzyme": "^2.4.1",
     "eslint": "3.2.2",
     "eslint-plugin-react": "^6.1.0",
@@ -40,6 +42,7 @@
     "nyc": "^8.3.0",
     "react-addons-test-utils": "^15.3.1",
     "sinon": "^1.17.5",
+    "style-loader": "^0.18.2",
     "webpack": "^2.2.1"
   },
   "config": {
