--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.4",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-dialog": "^0.9.1",
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.1.0",
