implements new theme based on default bootstrap; Adds SCSS support; Updates spreadsheet control (Spinner) style and functionality; Updates many UI changes, e.g. making the application use full window height with better usage of css flex layout. Introduces webpack resolve modules configuration to support import component with absolute path; Other small updates;

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,11 +40,13 @@
     "jsdom": "^9.4.5",
     "mocha": "^3.0.2",
     "mocha-jsdom": "^1.1.0",
+    "node-sass": "^4.5.3",
     "nyc": "^8.3.0",
     "react-addons-test-utils": "^15.3.1",
+    "sass-loader": "^6.0.6",
     "sinon": "^1.17.5",
     "style-loader": "^0.18.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.7.0"
   },
   "config": {
     "blanket": {
