MBH: next release

--- a/conda-recipe/vcdat/meta.yaml
+++ b/conda-recipe/vcdat/meta.yaml
@@ -2,7 +2,7 @@ about:
   home: http://gitub.com/UV-CDAT/vcdat
 package:
   name: vcdat
-  version: "0.0.2"
+  version: "0.0.3"
 requirements:
   build:
   - python
@@ -11,14 +11,13 @@ requirements:
   run:
   - python
   - flask
-  - vcs 2.10
-  - cdms2 2.10
-  - cdutil 2.10
-  - genutil 2.10
-  - mesalib
+  - vcs
+  - cdms2
+  - cdutil
+  - genutil
   - vcs-js
 source:
-  git_rev: v0.0.2
+  git_rev: v0.0.3
   git_url: git://github.com/UV-CDAT/vcdat.git
 build:
   noarch_python: true
