--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "main": "src/js/app.js",
   "private": true,
   "dependencies": {
+    "bootstrap-slider": "^9.8.1",
     "css-element-queries": "^0.3.2",
     "jquery": "^3.1.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.7",
     "react-bootstrap-dialog": "^0.9.1",
