--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.7",
     "react-bootstrap-dialog": "^0.9.1",
+    "react-color": "^2.13.8",
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.1.0",
