--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "node-sass": "^4.5.3",
     "nyc": "^8.3.0",
     "react-addons-test-utils": "^15.3.1",
+    "redux-test-utils": "^0.2.1",
     "sass-loader": "^6.0.6",
     "sinon": "^1.17.5",
     "style-loader": "^0.18.2",
