Updates frontend testing with new examples (#154)
* Adds simple modal component that will hold colormap editor

* Saturation widget functioning

* Fixes css for Saturation component

* Adds hue to color picker

* Working color palette

* Adds custom color palette. Adds basic input fields.

* Fixes issue where input boxes did not update color when edited.

* Removed some floats. Fixed up the css a little.

* Begins adding colormap widget

* Adds a mostly working colormap widget

* Fixes contrast ternary. Colormap is now editable with color picker

* Makes color picker switch to the cell color when a cell is clicked.

* Adds reset button and a function stub for handling saving colormaps

* Changes backend to use vcs 'getcolorcell' instead of index. Adds blend function to colormap widget

* Adds a comment explaining a piece of cryptic logic. Adds some logic to prevent errors in certain edge cases.

* Adds headings for color palettes, makes colormap cells more responsive

* Makes template editor more responsive to screen size.

* Begins adding redux to colormap editor
Begins fixing issue with eslint not picking up proptype validation
Adds a rudimentary method of saving colormaps that works with the GM editor.

* Adds ability to delete colormaps

* Begins adding a way to export color maps

* Export works

* Adds import to colormap editor

* Cleans up import/export css for colormaps

* Removes a bit of dead code

* Begins making apply work in colormap editor

* Colormap editor's apply button works

* Makes ColormapEditor apply button change based on num of col/rows

* Makes apply work when more than 4 cells are present. Fixes issue where frontend state did not update when a colormap was applied

* Updates testing scripts/packages so they work.

* Fixes import issues, and fixes a file location.

* Adds redux-test-utils for testing components connected to the redux store. adds example test

* Adds more skeleton

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,15 +38,17 @@
     "eslint": "3.2.2",
     "eslint-plugin-react": "^6.1.0",
     "html-file-cov": "^1.0.0",
+    "ignore-styles": "^5.0.1",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jsdom": "^9.4.5",
-    "mocha": "^3.0.2",
+    "mocha": "^3.5.3",
     "mocha-jsdom": "^1.1.0",
     "node-sass": "^4.5.3",
     "nyc": "^8.3.0",
     "react-addons-test-utils": "^15.3.1",
+    "redux-test-utils": "^0.2.1",
     "sass-loader": "^6.0.6",
     "sinon": "^1.17.5",
     "style-loader": "^0.18.2",
@@ -64,7 +66,7 @@
   },
   "nyc": {
     "sourceMap": false,
-    "instrument": false,
+    "instrument": true,
     "include": [
       "src/**/*.js*"
     ],
@@ -75,8 +77,9 @@
   "scripts": {
     "build": "webpack --colors --progress",
     "release": "webpack -p --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
-    "coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text npm test",
-    "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive",
+    "coverage": "NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test",
+    "test": "mocha test/mocha --require ignore-styles --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive",
+    "debug_tests": "mocha test/mocha --require ignore-styles --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive --inspect --debug-brk",
     "lint": "$(npm bin)/eslint -f table src/*.js* src/*/*.js* src/*/*/*.js* src/*/*/*/*.js*",
     "lint_silent": "npm run lint > lint.out; vim lint.out"
   },
