Updates some packages. Adds Pure export for colormapWidget. Begins testing ColormapWidget functionality

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,11 +42,12 @@
     "isparta": "^4.0.0",
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^0.2.0",
-    "jsdom": "^9.4.5",
+    "jsdom": "^11.4.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^3.5.3",
     "mocha-jsdom": "^1.1.0",
     "node-sass": "^4.5.3",
-    "nyc": "^8.3.0",
+    "nyc": "^11.3.0",
     "react-addons-test-utils": "^15.3.1",
     "redux-test-utils": "^0.2.1",
     "sass-loader": "^6.0.6",
@@ -78,8 +79,8 @@
     "build": "webpack --colors --progress",
     "release": "webpack -p --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
     "coverage": "NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test",
-    "test": "mocha test/mocha --require ignore-styles --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive",
-    "debug_tests": "mocha test/mocha --require ignore-styles --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive --inspect --debug-brk",
+    "test": "mocha test/mocha --require ignore-styles --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive -r jsdom-global/register",
+    "debug_tests": "mocha test/mocha --require ignore-styles --grep '/.*Test.js[x]{0,1}/' --compilers jsx:babel-core/register --recursive -r jsdom-global/register --inspect --debug-brk",
     "lint": "$(npm bin)/eslint -f table src/*.js* src/*/*.js* src/*/*/*.js* src/*/*/*/*.js*",
     "lint_silent": "npm run lint > lint.out; vim lint.out"
   },
