--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,3 +1,9 @@
 {
   "presets": [ "react", "es2015" ],
+  "sourceMaps": true,
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
