trying to get auto upload going again

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ before_install:
     - export PATH="$HOME/miniconda/bin:$PATH"
     - bash miniconda.sh -b -p $HOME/miniconda
     - conda config --set always_yes yes --set changeps1 no
-    - conda install -f "conda<4.3.13"
 script:
-    - conda install -c conda-forge -c uvcdat nose vcs mesalib nodejs vcs-js
+    - conda install -c uvcdat/label/nightly -c conda-forge -c uvcdat nose vcs mesalib nodejs vcs-js
     - export UVCDAT_ANONYMOUS_LOG=False
     - echo $TRAVIS_BRANCH
     - export TRAVIS_PR_BRANCH=$TRAVIS_BRANCH
@@ -23,4 +22,4 @@ script:
     #- pip install dropbox
     #- python run_tests.py --dropbox -v2
 after_success:
-    - if [ "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" == "false" ]; then conda install conda-build && conda install anaconda-client && bash scripts/conda_upload.sh ; fi
+    - if [ "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" == "false" ]; then conda install conda-build && conda install anaconda-client && bash ci-support/conda_upload.sh ; fi
