--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 os:
-    - osx
     - linux
 sudo: false
 before_install:
@@ -9,17 +8,12 @@ before_install:
     - bash miniconda.sh -b -p $HOME/miniconda
     - conda config --set always_yes yes --set changeps1 no
 script:
-    - conda install -c uvcdat/label/nightly -c conda-forge -c uvcdat nose vcs mesalib nodejs vcs-js
+    - conda install -y uvcdat -c uvcdat/label/nightly -c conda-forge -c uvcdat --file backend/requirements.txt
+    - cd frontend
+    - npm install
     - export UVCDAT_ANONYMOUS_LOG=False
     - echo $TRAVIS_BRANCH
     - export TRAVIS_PR_BRANCH=$TRAVIS_BRANCH
     - echo $TRAVIS_EVENT_TYPE
     - echo $TRAVIS_PULL_REQUEST
-    - cd frontend
-    - npm install
-    - cd ..
-    - python setup.py install 
-    #- pip install dropbox
-    #- python run_tests.py --dropbox -v2
-after_success:
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" == "false" ]; then conda install conda-build && conda install anaconda-client && bash ci-support/conda_upload.sh ; fi
+    - npm run coverage
