--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.26.0",
     "chai": "^3.5.0",
+    "coveralls": "^3.0.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.4",
     "enzyme": "^2.4.1",
@@ -80,6 +81,7 @@
     "build": "webpack --colors --progress",
     "release": "webpack -p --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
     "coverage": "cross-env NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test",
+    "coveralls": "cross-env NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test | coveralls",
     "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --require ignore-styles --require jsdom-global/register --compilers jsx:babel-register --recursive",
     "debug_tests": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --require ignore-styles --require jsdom-global/register --compilers jsx:babel-core/register --recursive --inspect --debug-brk",
     "lint": "$(npm bin)/eslint -f table src/*.js* src/*/*.js* src/*/*/*.js* src/*/*/*/*.js*",
