--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ script:
     - export TRAVIS_PR_BRANCH=$TRAVIS_BRANCH
     - echo $TRAVIS_EVENT_TYPE
     - echo $TRAVIS_PULL_REQUEST
-    - python setup.py install
     - cd frontend
     - npm install
+    - python ../setup.py install
     - npm run coveralls
 after_success:
     - if [ "$TRAVIS_OS_NAME" == "linux" -a "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" == "false" ]; then conda install conda-build && conda install anaconda-client && bash ci-support/conda_upload.sh ; fi
