--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ script:
     - echo $TRAVIS_PULL_REQUEST
     - cd frontend
     - npm install
-    - python ../setup.py install
+    - cd ..
+    - python setup.py install
+    - cd frontend
     - npm run coveralls
 after_success:
     - if [ "$TRAVIS_OS_NAME" == "linux" -a "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" == "false" ]; then conda install conda-build && conda install anaconda-client && bash ci-support/conda_upload.sh ; fi
