Fix report format for coveralls

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,7 +81,7 @@
     "build": "webpack --colors --progress",
     "release": "webpack -p --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
     "coverage": "cross-env NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test",
-    "coveralls": "cross-env NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test | coveralls",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --require ignore-styles --require jsdom-global/register --compilers jsx:babel-register --recursive",
     "debug_tests": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --require ignore-styles --require jsdom-global/register --compilers jsx:babel-core/register --recursive --inspect --debug-brk",
     "lint": "$(npm bin)/eslint -f table src/*.js* src/*/*.js* src/*/*/*.js* src/*/*/*/*.js*",
