Adds linting for imports. Fixes a css error

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "css-loader": "^0.28.4",
     "enzyme": "^2.4.1",
     "eslint": "3.2.2",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-react": "^6.1.0",
     "html-file-cov": "^1.0.0",
     "ignore-styles": "^5.0.1",
