Add editor tutorials (#325)
* Playing with joyride tutorial functionality for caclulator modal.

* Updated calculator tutorial and started colormap tutorial backend.

* Completed first draft for the Colormap joyride tutorial.

* Set-up joyride constants for use in tutorials. Perpared functionality fo template editor tutorials

* Minor changes to intro tutorial text

* Adding Templates joyride tutorial elemets

* Added functionality for a tutorial on loading variables.

* Finished up first draft for variable loading tutorial

* Updated .yaml files to have correct github link.

* Created an error boundary for the CachedFiles modal, to prevent stop application crash if file variables fail to load.

* Fixes to merged files.

* removed .yaml file because it gets generated anyway.

* Update meta.yaml and removed tabs from load variable modal.

* Created Proptype declarations for recently added props

--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -12,7 +12,7 @@ requirements:
   - setuptools
   - nodejs
   run:
-  - python
+  - python =2
   - flask
   - vcs
   - cdms2
@@ -24,4 +24,4 @@ build:
   noarch_python: true
 
 about:
-  home: http://gitub.com/UV-CDAT/vcdat
+  home: http://github.com/UV-CDAT/vcdat
