Added tags and syntax update.

--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -12,15 +12,15 @@ requirements:
   - setuptools
   - nodejs
   run:
-  - python=2
+  - python =2
   - nodejs
   - flask
-  - vcs
-  - cdms2
-  - cdutil
-  - genutil
+  - vcs 8.0
+  - cdms2 3.0
+  - cdutil 8.0
+  - genutil 8.1
   - service_identity
-  - vcsaddons
+  - vcsaddons 8.0
   - vcs-js
 
 build:
